Start create Card Game

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
             <div class="container d-flex justify-content-between align-items-center">
                 <a class="text-light fs-5 fw-bold" href="#">In_English</a>
                 <nav>
-                    <ul class="d-flex gap-5 mb-0 ">
+                    <ul class="d-flex gap-5 mb-0">
                         <li><a class="text-light" href="#">Home</a></li>
-                        <li><a class="text-light" href="#">About</a></li>
-                        <li><a class="text-light" href="#">Contact</a></li>
+                        <li><a class="text-light" href="#">Learn</a></li>
+                        <li><a class="text-light" href="#">About and FAQ</a></li>
                     </ul>
                 </nav>
             </div>
@@ -34,7 +34,27 @@
                 <button class="prev btn btn-outline-dark h-25"><</button>
                 <div class="overflow w-100 p-3 border border-dark rounded-3">
                     <div class="container slider__container">
-                        <div class="slide">sdfsdf1</div>
+                        <div class="slide main__card text-light">
+                            <h2 class="pb-3 mb-3 text-center fs-1 border-bottom border-dark">Card Game</h2>
+                            <div class="d-flex flex-column justify-content-center gap-4 position-relative p-3 rounded-3 bg-dark w-75 mx-auto mb-4 mt-5 h-50">
+                                <div>
+                                    <h3 class="text-center mb-4">Word</h3>
+                                    <p class="text-center blockquote-footer fs-5">transcription</p>
+                                </div>
+                                <div class="text-center">
+                                    <button class="btn btn-success">show</button>
+                                </div>
+                            </div>
+                            <center>
+                                <div class="mb-4">
+                                    <button class="btn btn-dark"><</button>
+                                    <button class="btn btn-dark">></button>
+                                </div>
+                                <center>
+                                    <button class="btn-danger btn">Add Word</button>
+                                </center>
+                            </center>
+                        </div>
                         <div class="slide">sdfwedrhhtr2</div>
                     </div>
                 </div>
