Add word and word slider

--- a/index.html
+++ b/index.html
@@ -36,26 +36,20 @@
                     <div class="container slider__container">
                         <div class="slide main__card text-light">
                             <h2 class="pb-3 mb-3 text-center fs-1 border-bottom border-dark">Card Game</h2>
-                            <div class="d-flex flex-column justify-content-center gap-4 position-relative p-3 rounded-3 bg-dark w-75 mx-auto mb-4 mt-5 h-50">
-                                <div>
-                                    <h3 class="text-center mb-4">Word</h3>
-                                    <p class="text-center blockquote-footer fs-5">transcription</p>
-                                </div>
-                                <div class="text-center">
-                                    <button class="btn btn-success">show</button>
-                                </div>
+                            <div class="d-flex position-relative p-3 rounded-3 bg-dark w-75 mx-auto mb-4 mt-5 h-50 slider__container-card">
+                                <!-- card__elemetns -->
                             </div>
                             <center>
                                 <div class="mb-4">
-                                    <button class="btn btn-dark"><</button>
-                                    <button class="btn btn-dark">></button>
+                                    <button class="btn btn-dark prev__card"><</button>
+                                    <button class="btn btn-dark next__card">></button>
                                 </div>
                                 <center>
                                     <button class="btn-danger btn">Add Word</button>
                                 </center>
                             </center>
                         </div>
-                        <div class="slide">sdfwedrhhtr2</div>
+                        <div class="slide">Game 2</div>
                     </div>
                 </div>
                 <button class="btn btn-outline-dark next h-25">></button>
